# Mandelbrot

./: CMakeLists.txt  gpu_texture.cu  gpu_texture.cuh
src/: CMakeLists.txt  cuda_exception.cuh  gpu_texture.cu  gpu_texture.cuh  main.cpp  mandelbrot_kernel.cu  mandelbrot_kernel.cuh  program.cu  program.h
